back to emptydir in plex

--- a/cluster/apps/media/plex/bjw-s-helm-release.yaml
+++ b/cluster/apps/media/plex/bjw-s-helm-release.yaml
@@ -37,41 +37,41 @@ spec:
                 - amd64
 
     controllers:
-      # backup:
-      #   enabled: false
-      #   nameOverride: backup
-      #   type: cronjob
-      #   cronjob:
-      #     schedule: 0 */6 * * *
-      #     backoffLimit: 3
-      #   containers:
-      #     main:
-      #       enabled: true
-      #       image:
-      #         repository: eeacms/rsync
-      #         tag: latest
-      #       command:
-      #         - /bin/sh
-      #       args: # copy from container to nas
-      #         - -c
-      #         - "rsync -a /copy/. /nas/"
+      backup:
+        enabled: false
+        nameOverride: backup
+        type: cronjob
+        cronjob:
+          schedule: 0 */6 * * *
+          backoffLimit: 3
+        containers:
+          main:
+            enabled: true
+            image:
+              repository: eeacms/rsync
+              tag: latest
+            command:
+              - /bin/sh
+            args: # copy from container to nas
+              - -c
+              - "rsync -a /copy/. /nas/"
       main:
-        # initContainers:
-        #   loader:
-        #     enabled: false
-        #     image:
-        #       repository: eeacms/rsync
-        #       tag: latest
-        #     command:
-        #       - /bin/sh
-        #     args: # copy from nas to container
-        #       - -c
-        #       # - "cp -r -a /nas/. /copy/"
-        #       - "rsync -a /nas/. /copy/"
-        #       # - -r
-        #       # - -a
-        #       # - /nas/.
-        #       # - /copy/
+        initContainers:
+          loader:
+            enabled: false
+            image:
+              repository: eeacms/rsync
+              tag: latest
+            command:
+              - /bin/sh
+            args: # copy from nas to container
+              - -c
+              # - "cp -r -a /nas/. /copy/"
+              - "rsync -a /nas/. /copy/"
+              # - -r
+              # - -a
+              # - /nas/.
+              # - /copy/
         containers:
           main:
             image:
@@ -160,31 +160,31 @@ spec:
         server: ${NAS_ADDRESS}
         path: /volume2/plex_config
         advancedMounts:
-          # backup:
-          #   main:
-          #     - path: /nas
-          #       readOnly: false
+          backup:
+            main:
+              - path: /nas
+                readOnly: false
+          main:
+            loader:
+              - path: /nas
+                readOnly: false
           # main:
-          #   loader:
-          #     - path: /nas
+          #   main:
+          #     - path: /config
           #       readOnly: false
+      copy:
+        enabled: false
+        type: emptyDir
+        size: 50Gi
+        advancedMounts:
+          backup:
+            main:
+              - path: /copy
+                readOnly: false
           main:
             main:
               - path: /config
-                readOnly: false          
-      # copy:
-      #   enabled: false
-      #   type: emptyDir
-      #   size: 50Gi
-      #   advancedMounts:
-      #     backup:
-      #       main:
-      #         - path: /copy
-      #           readOnly: false
-      #     main:
-      #       main:
-      #         - path: /config
-      #           readOnly: false
-      #       loader:
-      #         - path: /copy
-      #           readOnly: false
+                readOnly: false
+            loader:
+              - path: /copy
+                readOnly: false
