back to emptydir in plex

--- a/cluster/apps/media/plex/bjw-s-helm-release.yaml
+++ b/cluster/apps/media/plex/bjw-s-helm-release.yaml
@@ -38,7 +38,7 @@ spec:
 
     controllers:
       backup:
-        enabled: false
+        enabled: true
         nameOverride: backup
         type: cronjob
         cronjob:
@@ -58,7 +58,7 @@ spec:
       main:
         initContainers:
           loader:
-            enabled: false
+            enabled: true
             image:
               repository: eeacms/rsync
               tag: latest
