--- a/cluster/apps/media/plex/bjw-s-helm-release.yaml
+++ b/cluster/apps/media/plex/bjw-s-helm-release.yaml
@@ -155,6 +155,7 @@ spec:
               - path: /data
                 readOnly: false
       config:
+        enabled: true
         type: persistentVolumeClaim
         storageClass: longhorn
         size: 20Gi
