--- a/cluster/apps/kustomization.yaml
+++ b/cluster/apps/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - system-upgrade
   - home
   - cattle-system
-  - longhorn-system
+  # - longhorn-system
   - media
   # - games
   # - monitoring
