--- a/cluster/apps/media/plex/kustomization.yaml
+++ b/cluster/apps/media/plex/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # - storage.yaml
-  # - bjw-s-helm-release.yaml
+  - bjw-s-helm-release.yaml
